[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.6",
    "langchain-core>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
